# matrixlib

./: .ai-generation-prompt.md  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  ALL_IMPROVEMENTS_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMMON_MISTAKES.md  CONTRIBUTING.md  Dockerfile  Doxyfile  IMPROVEMENTS_SUMMARY.md  LICENSE  MIGRATION.md  MIGRATION_GUIDES.md  PERFORMANCE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SAFETY_IMPROVEMENTS.md  THREAD_SAFETY.md  conanfile.py  format.sh  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  bench_constexpr.cpp  bench_matrix_multiply.cpp  bench_simd.cpp  bench_vector_ops.cpp
cmake/: matrixlib-config.cmake.in
design/: README.md  class_hierarchy.puml  cpp_standard_features.puml  memory_layout.puml  module_structure.puml  safety_architecture.puml  simd_optimization.puml  transformation_pipeline.puml
docs/: API_Documentation.md  COOKBOOK.md  Cpp_Standard_Optimizations.md  IAR_Integration.md  README.md  SIMD_Optimizations.md  Sanitizer_Safety.md  TROUBLESHOOTING.md
docs/doxygen/: README.md
examples/: CMakeLists.txt  basic_usage.cpp  constexpr_rotations.cpp  graphics_pipeline.cpp  robotics_kinematics.cpp  sensor_fusion.cpp
include/matrixlib/: compiler_features.hpp  constants.hpp  geometry.hpp  math_linear.hpp  matrix.hpp  matrix2D.hpp  matrix3D.hpp  matrix_view.hpp  matrixlib.hpp  quaternion.hpp  vec2D.hpp  vec3D.hpp  vector.hpp  version.hpp
tests/: CMakeLists.txt  README.md
tests/google/: CMakeLists.txt  README.md  test_constants.cpp  test_constexpr.cpp  test_edge_cases.cpp  test_mat.cpp  test_numerical_accuracy.cpp  test_property_based.cpp  test_quat.cpp  test_simd_equivalence.cpp  test_vec.cpp
tests/zephyr/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
tests/zephyr/src/: test_constants.cpp  test_main.cpp  test_mat.cpp  test_quat.cpp  test_vec.cpp
zephyr/: CMakeLists.txt  Kconfig  README.md  module.yml
